--- a/src/main/webapp/weixin/front/index.html
+++ b/src/main/webapp/weixin/front/index.html
@@ -1,10 +1,40 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-Index
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
+
+    <link href="lib/css/ionic.css" rel="stylesheet">
+    <link href="lib/css/ionic.min.css" rel="stylesheet">
+    <!-- ionic/angularjs js -->
+    <script src="lib/js/ionic.bundle.js"></script>
+    <script src="lib/js/angular/angular-resource.min.js"></script>
+
+    <!-- cordova script (this will be a 404 during development) -->
+    <!-- your app's js -->
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+
+  </head>
+  <body ng-app="myApp">
+  <ion-side-menus enable-menu-with-back-views="true">
+    <ion-side-menu-content>
+      <ion-nav-bar class="bar-positive" >
+        <ion-nav-back-button>
+
+        </ion-nav-back-button>
+      </ion-nav-bar>
+
+    </ion-side-menu-content>
+    <ion-side-menu side="left" width="200" class="stable-bg">
+
+    </ion-side-menu>
+  </ion-side-menus>
+
+
+    <ion-nav-view></ion-nav-view>
+
+  </body>
 </html>
