--- a/src/main/webapp/weixin/front/index.html
+++ b/src/main/webapp/weixin/front/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>订单管理系统</title>
 
     <link href="lib/css/ionic.css" rel="stylesheet">
     <link href="lib/css/ionic.min.css" rel="stylesheet">
@@ -13,6 +13,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <!-- your app's js -->
+    <script src="js/config.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
