--- a/src/main/webapp/weixin/front/index.html
+++ b/src/main/webapp/weixin/front/index.html
@@ -17,6 +17,10 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="commonJS/encrypt/tripledes.js"></script>
+    <script src="commonJS/encrypt/mode-ecb.js"></script>
+    <script src="commonJS/encrypt/encrypt.js"></script>
+
 
   </head>
   <body ng-app="myApp">
