--- a/src/main/webapp/weixinfront/front/index.html
+++ b/src/main/webapp/weixinfront/front/index.html
@@ -7,9 +7,12 @@
 
     <link href="lib/css/ionic.css" rel="stylesheet">
     <link href="lib/css/ionic.min.css" rel="stylesheet">
+    <!--<link href="lib/image/image-crop-styles.css"  rel="stylesheet">-->
     <!-- ionic/angularjs js -->
     <script src="lib/js/ionic.bundle.js"></script>
     <script src="lib/js/angular/angular-resource.min.js"></script>
+    <!--<script src="lib/js/angular/angular.min.js"></script>-->
+    <!--<script src="lib/image/image-crop.js"></script>-->
 
     <!-- cordova script (this will be a 404 during development) -->
     <!-- your app's js -->
