添加七牛上传图片

--- a/src/main/webapp/weixinfront/front/index.html
+++ b/src/main/webapp/weixinfront/front/index.html
@@ -11,6 +11,9 @@
     <!-- ionic/angularjs js -->
     <script src="lib/js/ionic.bundle.js"></script>
     <script src="lib/js/angular/angular-resource.min.js"></script>
+    <script src="lib/js/angular/angular.min.js"></script>
+    <script src="lib/js/angular/angular-local-storage.js"></script>
+    <script src="lib/js/qiniu-upload/qupload.js"></script>
     <!--<script src="lib/js/angular/angular.min.js"></script>-->
     <!--<script src="lib/image/image-crop.js"></script>-->
 
